# prompt-xray

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: config.json
benchmarks/cases/: agency-agents.json  aider.json  anthropic-cookbook.json  anthropic-sdk-go.json  anthropic-sdk-python.json  anthropic-sdk-typescript.json  autogen.json  autogpt.json  browser-use.json  camel.json  chatdev.json  claude-code.json  continue.json  crewai.json  dspy.json  fastmcp.json  gradio.json  graphiti.json  langchain.json  langgraph.json  langgraphjs.json  langserve.json  litellm.json  llama-index.json  mastra.json  mcp-inspector.json  mcp-python-sdk.json  mcp-servers.json  mcp-typescript-sdk.json  mem0.json  open-interpreter.json  open-webui.json  openai-agents-python.json  openai-cookbook.json  openai-go.json  openai-java.json  openai-node.json  openai-python.json  openhands.json  potpie.json  (+9 more)
compare-benchmarks/agency-vs-inspector/: compare.html  compare.md
compare-benchmarks/browser-use-vs-langgraph/: compare.html  compare.md
compare-demo/: compare.json  compare.md
compare-demo-2/: compare.html  compare.json  compare.md
demo-local/: report.json  report.md
demo-local-2/: report.json
docs/: launch-copy.md
samples/comparisons/: agency-vs-inspector.json  browser-vs-langgraph.json
samples/reports/: agency-agents.json  openai-agents-python.json
src/prompt_xray/: __init__.py  analysis.py  bench.py  (+10 more)
tests/: test_bench.py  test_bench_ci.py  test_discovery.py  test_scan.py  test_webapp.py
ui/: app.js  manifest.json  styles.css
(+34 files in other folders)
